# rp-pppoe

./: .gitignore  .pppoe.prcs_aux  HOW-TO-CONNECT  Makefile  Makefile.in  README  SERVPOET  adsl-connect  adsl-state.pl  config.cache  config.h  config.h.in  config.status  configure  configure.in  firewall  go  go-gui  pppoe.8  pppoe.c  pppoe.h  rp-pppoe.spec
configs/: pppoe-server-options  pppoe.conf
debian/: README.Debian  changelog  conffiles  control  copyright  dsl-provider  gbp.conf  ppp_on_boot.dsl  pppoe.lintian-overrides  rules  watch
debian/patches/: 01_auto_ifup.patch  02_change_mac_option.patch  03_man_pages.patch  04_change_default_timeout.patch  04_ignore_broadcasted_pado_packets.patch  05_change_default_timeout.patch  05_typo_fixes.patch  06_typo_fixes.patch  series
doc/: CHANGES  HOW-TO-CONNECT  KERNEL-MODE-PPPOE
gui/: Makefile.in  pppoe-wrapper.1  tkpppoe.1  tkpppoe.in  wrapper.c
gui/html/: tkpppoe.html
libevent/: Makefile
man/: pppoe-connect.8  pppoe-relay.8  pppoe-server.8  pppoe-setup.8  pppoe-sniff.8  pppoe-start.8  pppoe-status.8  pppoe-stop.8  pppoe.8  pppoe.conf.5
man/obsolete/: pppoe-relay.8.v0  pppoe-server.8.v0
scripts/: adsl-connect.in  adsl-setup.in  adsl-start.in  adsl-stop.in  pppoe-connect.in
src/: Makefile.in  common.c  config.h.in  configure  configure.in  debug.c  discovery.c  if.c  plugin.c  pppoe-server.c  pppoe-server.h  pppoe-sniff.c  pppoe.c  pppoe.h  relay.c
src/obsolete/: pppoe.c.v0  pppoe.c.v1
